@@ -57,7 +57,7 @@
      <item>
       <widget class="QToolButton" name="deleteToolButton">
        <property name="toolTip">
-        <string>Remove this profile. The Default profile and system provided profiles cannot be removed.</string>
+        <string>Remove this profile. System provided profiles cannot be removed.</string>
        </property>
        <property name="icon">
         <iconset resource="../../image/toolbar.qrc">
